DO328/labs/resilience-timeout/headers-timeout.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: preference-vs
spec:
  hosts:
    - preference
  http:
    - headers:
        request:
          add:
            x-envoy-upstream-rq-timeout-ms: "500"
      route:
        - destination:
            host: preference
            port:
              number: 8080
