DO328/labs/resilience-timeout/recommendation-delay.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: recommendation-vs
spec:
  hosts:
    - recommendation
  http:
    - fault:
        delay:
          percent: 100
          fixedDelay: 3s
      route:
        - destination:
            host: recommendation
            port:
              number: 8080
